@@ -1,3 +1,4 @@
+5/24/13 completed port of beaker view
 5/24/13 add visual cue for inside-bottom of beaker
 5/24/13 add label to beaker
 5/24/13 use rgb values for solute colors
